# PyAssistant

./: .gitignore  LICENSE  README.md  config.yml  pyproject.toml
src/pyassistant/: app.py  config.py  logger.py  model.py
src/pyassistant/diffuser_models/: pixart_model.py
src/pyassistant/gui/: main_window.py
